<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>io.quarkiverse</groupId>
        <artifactId>quarkiverse-parent</artifactId>
        <version>10</version>
    </parent>

    <groupId>io.quarkiverse.artemis</groupId>
    <artifactId>quarkus-artemis-parent</artifactId>
    <version>2.0.1</version>
    <name>Quarkus - Artemis - Parent</name>

    <packaging>pom</packaging>
    <modules>
        <module>bom</module>
        <module>build-parent</module>
        <module>core</module>
        <module>jms</module>
        <module>docs</module>
        <module>test-framework</module>
        <module>integration-tests</module>
    </modules>
    <properties>
        <compiler-plugin.version>3.8.1</compiler-plugin.version>
        <maven.compiler.parameters>true</maven.compiler.parameters>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <quarkus.version>2.14.0.Final</quarkus.version>

        <artemis.version>2.26.0</artemis.version>
    </properties>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>io.quarkus</groupId>
                    <artifactId>quarkus-maven-plugin</artifactId>
                    <version>${quarkus.version}</version>
                </plugin>
                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${compiler-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>io.quarkus</groupId>
                    <artifactId>quarkus-extension-maven-plugin</artifactId>
                    <version>${quarkus.version}</version>
                    <executions>
                        <execution>
                            <phase>compile</phase>
                            <goals>
                                <goal>extension-descriptor</goal>
                            </goals>
                            <configuration>
                                <deployment>${project.groupId}:${project.artifactId}-deployment:${project.version}</deployment>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

  <scm>
    <tag>2.0.1</tag>
  </scm>
</project>
